--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,14 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "jsx": "react", 
+    "esModuleInterop": true,
+    "types": ["jest", "@testing-library/jest-dom"],
+    "target": "es6",
+    "module": "commonjs",
+    "strict": true,
+    "skipLibCheck": true
+  }
 }
